[tool.poetry]
name = "videos"
version = "0.1.0"
description = ""
authors = ["Ulisse Mini <ulisse.mini@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
manim = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
